@@ -1,11 +1,12 @@
-FROM eclipse-temurin:17-jdk-alpine
-
+FROM maven:3.8.4-openjdk-11-slim AS build
 WORKDIR /app
-
 COPY . .
+ENV MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
+RUN mvn clean package -DskipTests
 
-RUN javac src/*.java
-
-EXPOSE 1099
-
-CMD ["java", "-cp", "src", "GameService"] 
+FROM openjdk:11-jre-slim
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
+EXPOSE 8080
+ENV JAVA_OPTS="-Xmx512m -XX:MaxPermSize=128m"
+CMD ["java", "-jar", "app.jar"] 
